--- a/MyApp/app.json
+++ b/MyApp/app.json
@@ -18,10 +18,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.cinguzman.MyApp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2db1b3ac-c75b-4c1f-a123-b9fa12a2103a"
+      }
     }
   }
 }
