--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -13,14 +13,15 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "eas-cli": "^12.6.2",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.14.0",
+    "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.20.0",
-    "react-native-reanimated": "^3.15.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-table-component": "^1.2.2"
